--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@ant-design/icons": "^4.7.0",
     "@babel/core": "^7.16.0",
     "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^5.5.0",
@@ -32,7 +35,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
-    "gsap": "^3.10.4",
+    "gsap": "npm:@gsap/member@^3.10.4",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
