--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
@@ -111,6 +110,8 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1",
     "file-loader": "^6.2.0",
     "flow-bin": "^0.173.0",
     "html-webpack-plugin": "^5.5.0",
