--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.4.2",
     "prompts": "^2.4.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
