--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@ant-design/icons": "^4.7.0",
     "@babel/core": "^7.16.0",
     "@babel/polyfill": "^7.12.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.3",
@@ -33,6 +35,7 @@
     "eslint-config-react-app": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^10.0.0",
     "gsap": "npm:@gsap/member@^3.10.4",
     "html-webpack-plugin": "^5.5.0",
@@ -58,6 +61,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
+    "react-fontawesome": "^1.7.1",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
