--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "three": "^0.142.0",
+    "vconsole": "^3.14.6",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
