--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,15 +23,20 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [16.x, 15.x]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Use Node.js
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-      - run: npm install
-      - run: npm run build
+          node-version: ${{ matrix.node-version }}
+        - run: npm ci
+        - run: npm run build
+
+
       - name: Check Out Repo
         uses: actions/checkout@v2
 
