--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
-      - run: npm run build --if-present
+      - run: npm run build
 
       - name: Check Out Repo
         uses: actions/checkout@v2
