--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     #    对main做push行为
-    branches: 'main'
+    branches: 'master'
     #    对tag做push行为
     tags:
       - 'v*'
