--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,8 +6,8 @@ name: CI to Docker Hub
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    #    对main做push行为
-    branches: 'master'
+    #    对main做push行为(由于目前都往master分支push，怕太频繁的出发工作流，所以建议使用tag)
+    branches: 'main'
     #    对tag做push行为
     tags:
       - 'v*'
